# konoran

./: .gitignore  Cargo.toml  Design.md  LICENSE.txt  Readme.md  Spec.md  Tutorial.md  asm  asm2  flake.nix  rust_out.wasm
.github/workflows/: rust.yml  rustdoc.yml
.trash/: add.c  add.cpp  add.rs  add.wasm  asdf
examples/: cmd.knr  irexample.knr  irexample3.knr  irexample4.knr  irexample5.knr  irexample6.knr  irexample_other.knr  irexample_other.txt  nbody.knr  nbody.rs  nbody_cmd.knr  nbody_evil.rs  nbody_evil.txt  nbody_evil_cmd.knr  nbody_intrinsic.txt  nbody_intrinsic_vec4.txt  nbody_simd_vec4.knr  pointer_conjuration_test.knr  test.knr
fragments/: highlightjs.html
src/: compiler.rs  filelines.rs  funcs.rs  inkwell_helpers.rs  intrinsics_lists.rs  lib.rs  main.rs  oldmain.rs  stdlib.rs
src/parser/: ast.rs  defaultgrammar.txt  grammar.rs  irexample - Copy.txt  irexample.txt  irexample2.txt  irexample3.txt  irexample4.txt  irexample5.txt  irexample_other.txt  irexample_other_optional.txt  irgrammar.txt  matches.rs  mod.rs  nbody.txt  nbody_intrinsic.txt  nbody_intrinsic_cheat.txt  nbody_intrinsic_vec4.txt  nbody_simd.txt  nbody_simd_vec4.txt  nbody_vec4.txt  regexholder.rs  strings.rs
