[package]
name = "testlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.97.1"
cranelift-jit = "0.97.1"
cranelift-module = "0.97.1"
cranelift-codegen = {version="0.97.1", features=["disas"]}
regex = "1.7.1"
capstone = "0.9"
