[package]
name = "testlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
inkwell = { version = "0.2.0", features = ["llvm16-0"], default-features = false }

[profile.release]
opt-level = 2
debug = true
