[package]
name = "konoran"
version = "0.1.0"
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
inkwell = { git = "https://github.com/TheDan64/inkwell.git", rev = "5d5a531c765a6ad37aa6591c0287d0f9109fff62", features = ["llvm18-0"] }
llvm-sys = { version = "180", features = ["force-static"] }

[profile.release]
opt-level = 2
debug = true
